--- a/my_cpp_pkg/CMakeLists.txt
+++ b/my_cpp_pkg/CMakeLists.txt
@@ -8,6 +8,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(example_interfaces REQUIRED)
+find_package(my_robot_interfaces REQUIRED)
 
 add_executable(cpp_node src/my_first_node.cpp)
 ament_target_dependencies(cpp_node rclcpp example_interfaces)
@@ -23,6 +24,9 @@ ament_target_dependencies(add_two_ints_client rclcpp example_interfaces)
 
 add_executable(add_two_ints_server src/add_two_ints_server.cpp)
 ament_target_dependencies(add_two_ints_server rclcpp example_interfaces)
+
+add_executable(hw_status_publisher src/hw_status_publisher.cpp)
+ament_target_dependencies(hw_status_publisher rclcpp my_robot_interfaces)
 
 install(TARGETS
   cpp_node
